# a3d3-ligo-dataset

./: .gitmodules  README.md  config.cfg  generate_datasets.py  pyproject.toml  run.sh
a3d3_ligo_dataset/: aframe_analyze.py  generate_datasets.py  pipeline.py  prior.py
